bug fix in interests tag overflow

--- a/web/src/components/Registration.css
+++ b/web/src/components/Registration.css
@@ -56,7 +56,18 @@
     padding: 5px;
     border-radius: 4px;
     width: 100%;
-
+}
+.ReactTags__selected{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: flex-start;
+	align-items: center;
+	align-content: space-around;
+}
+.ReactTags__selected .ReactTags__tag{
+    margin-top: 5px;
 }
   
 
